Only warn in debug builds, and don't assert on user defined actions. bug 153783, r+sr=jst